keygen: Add a way to override the filename in pushcert
Add a -n option so the remote certificate name can be set to what the
user wants.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/gtlssh-keygen.1
+++ b/tools/gtlssh-keygen.1
@@ -67,7 +67,7 @@ also rehash the directory.  If
 is specified, input comes from stdin and the file is not required or
 used.
 .TP
-.I pushcert [-p <port>] <hostname> [[-p <port>] <hostname> [...]]
+.I pushcert [-n <name> ] [-p <port>] <hostname> [[-p <port>] <hostname> [...]]
 Put the local certificate for the given host onto the remote host so
 it can be used for login.  It uses old credentials (credentials
 with .1 appended to the name, per keygen) if they are there.  This is
@@ -78,7 +78,10 @@ connect with gtlssh and send the certificate.  Otherwise it will use
 default credentials and hope for the best, probably only useful if
 passwords are accepcted.  This only works one keygen back, if you have
 run the keygen command twice for the host, you will need to transfer
-the certificate manually.
+the certificate manually.  By default the credential on the remote
+host is named the output of 'hostname -f',
+.I -n
+overrides this.
 .TP
 .I serverkey
 Create keys for the server, generally in /etc/gtlssh/gtlsshd.key and
