keygen: In a rehash, remove certificates that have expired
Keep things more tidy.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/gtlssh-keygen.1
+++ b/tools/gtlssh-keygen.1
@@ -57,6 +57,9 @@ in the given directories.  If no directory is specified, it rehashes
 
 Note that if you add keys to these directories, you must rehash them
 or they will not work.
+
+.I rehash
+will automatically remove any certificates that have expired.
 .TP
 .I addallow [-i] <hostname> <file>
 Add the given file as an allowed public certificate for the given
