mdns: Don't free watches or services on mdns free
That can lead to hard to resolve issues freeing things, especially
dealing with python's refcounting garbage collection.

So instead require the user to free all the watches and services before
the mdns free will complete.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio_mdns.3
+++ b/man/gensio_mdns.3
@@ -71,7 +71,8 @@ structure with
 Note that code may still be in mdns callbacks when the free returns,
 you have to make sure to wait until the done callback is called to
 know the code is out of all callbacks.  The done callback is optional
-if you don't care.
+if you don't care.  Also note that the mdns will not be freed (and
+done not called) until all the services and watches are freed for it.
 
 For the remaining functions, the
 .I interface
