file: Add a read_close option
Allow the file gensio to not return GE_REMCLOSE when out of read data.
This is useful if you want to feed in a bunch of data but don't want
things to shut down because of a close.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -750,6 +750,12 @@ Set the input filename.
 .B outfile=filename
 Set the output filename.
 .TP
+.B read_close[=true|false]
+If this is true (the default), cause a GE_REMCLOSE error on read when
+all the file data is ready.  If false, just stop returning data and
+don't do the GE_REMCLOSE.  This is useful if you just want to inject a
+bunch of data then do nothing.
+.TP
 .B create[=true|false]
 Create the output file if it does not exist.
 .TP
